--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Furniture Emporium</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <main>
@@ -12,38 +13,50 @@
           bring home.
         </p>
       </header>
-      <article>
-        <h2>Ergonomic Couch</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$20.00 <s>$25.00</s></p>
-        <button>Add to cart</button>
+      <article class="product-card">
+        <h2 class="item-name">Ergonomic Couch</h2>
+        <div class="item-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <div class="price-and-button">
+            <p>$20.00 <s>$25.00</s></p>
+            <button>Add to cart</button>
+          </div>
+        </div>
       </article>
-      <article>
-        <h2>Frozen Table</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$49.95 <s>$60.00</s></p>
-        <button>Add to cart</button>
+      <article class="product-card">
+        <h2 class="item-name">Frozen Table</h2>
+        <div class="item-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <div class="price-and-button">
+            <p>$49.95 <s>$60.00</s></p>
+            <button>Add to cart</button>
+          </div>
+        </div>
       </article>
-      <article>
-        <h2>Handcrafted Chair</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$18.99 <s>$32.99</s></p>
-        <button>Add to cart</button>
+      <article class="product-card">
+        <h2 class="item-name">Handcrafted Chair</h2>
+        <div class="item-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <div class="price-and-button">
+            <p>$18.99 <s>$32.99</s></p>
+            <button>Add to cart</button>
+          </div>
+        </div>
       </article>
     </main>
   </body>
